--- a/pastvina/templates/pastvina/game_overview.html
+++ b/pastvina/templates/pastvina/game_overview.html
@@ -14,7 +14,7 @@
 
 <section class="padding-small light">
     <h2>Přehled kol</h2>
-    <div class="game-type-container">
+    <div class="horizontal-container">
         {% if test_round %}
         <div style="flex: 1;" class="vertical-container">
             <div class="game-wrapper">
