--- a/pastvina/templates/pastvina/index.html
+++ b/pastvina/templates/pastvina/index.html
@@ -22,9 +22,11 @@
 </section>
 
 <section class="dark">
-    {% for contrib in contribs %}
-        {% include "pastvina/parts/contrib.html" %}
-    {% endfor %}
+    <div class="horizontal-container">
+        {% for contrib in contribs %}
+            {% include "pastvina/parts/contrib.html" %}
+        {% endfor %}
+    </div>
 </section>
 
 
