--- a/pastvina/templates/pastvina/parts/game_header.html
+++ b/pastvina/templates/pastvina/parts/game_header.html
@@ -1,8 +1,8 @@
 <!-- Game Header -->
 <div id="game-header">
-    <div class="game-header">
-        <div style="float: left;">Peníze: <span id="game-money">-</span></div>
-        <div style="float: right;">Další iterace za <span id="tick-countdown">-</span> s</div>
+    <div class="horizontal-apart game-header">
+        <div>Peníze: <span id="game-money">-</span></div>
+        <div>Další iterace za <span id="tick-countdown">-</span> s</div>
     </div>
 </div>
 <div style="display: none;" id="game-header-placeholder"></div>
