--- a/pastvina/templates/pastvina/parts/menu.html
+++ b/pastvina/templates/pastvina/parts/menu.html
@@ -7,7 +7,8 @@
 {% else %}
 <nav>
 {% endif %}
-    <div class="left">
+<div class="horizontal-apart">
+    <div class="nav-container">
     <a href="/" class="logo">N-trophy 2021 finále</a>
 
     <a href="{% url 'game_overview' %}">Hry</a>
@@ -15,7 +16,7 @@
     <a href="{% url 'rules' %}">Pravidla</a>
 
     </div>
-    <div class="right">
+    <div class="nav-container">
     {% if user.is_superuser %}
         <a href="{% url 'admin:index' %}">Admin</a>
     {% endif %}
@@ -27,6 +28,6 @@
     {% else %}
         <a class="button" href="{% url 'login' %}" data-modal="#login-form">Přihlaš se</a>
     {% endif %}
-
     </div>
+</div>
 </nav>
