--- a/pastvina/templates/pastvina/parts/footer.html
+++ b/pastvina/templates/pastvina/parts/footer.html
@@ -1,5 +1,7 @@
 <!-- Footer -->
 <footer class="light padding">
+<div class="footer-container">
         <span>N-Trophy Logika Team {% now "Y" %} ©</span>
         <span><a href="mailto: logika@ntrophy.cz"><i class="far fa-envelope"></i>logika@ntrophy.cz</a></span>
+</div>
 </footer>
