--- a/pastvina/templates/pastvina/rules.html
+++ b/pastvina/templates/pastvina/rules.html
@@ -11,8 +11,10 @@
 <section class="padding-small light">
     <h1>Pravidla</h1>
 </section>
+
 <div id="rules_text">
-<section class="padding-small dark rules">
+
+    <section class="padding-small dark rules">
     <h3>O hře</h3>
     <p>Na následujících 90 minut se stáváte farmáři, pěstujete plodiny, chováte dobytek a snažíte se maximalizovat svůj zisk.</p>
     <p>Hrát budete celkem čtyřikrát. První kolo nebude na body, bude trvat pouhých 5 minut.
@@ -26,9 +28,8 @@
         Plodiny stačí zasadit a počkat, až vyrostou. Dobytek však musíte krmit, a to plodinami, které si buď koupíte, nebo sami vypěstujete.
         Informace o jednotlivých surovinách najdete v tabulkách v rozhraní hry. Jediná položka, která se mění, je cena.
     </p>
-    <p>Hraje se 'tahově', každých 10-30s se uloží zaklikané změny a odešlou k vyhodnocení.
+    <p>Hraje se tahově, každých 10-30 s se uloží zaklikané změny a odešlou k vyhodnocení.
         V návaznosti na tahu vás a vašich soupeřů se změní situace na trhu a upraví se ceny plodin a dobytka.</p>
-
 </section>
 
 <section class="padding-small light rules">
@@ -37,7 +38,7 @@
     <p>
         <ul>
             <li>Ceny všech surovin se mění s časem.</li>
-            <li>Když nebudete krmit zvířata, zemřou vám.</li>
+            <li>Když nebudete mít dost peněz na nakrmení zvířat, zemřou vám.</li>
             <li>Stodola má jen omezenou kapacitu.</li>
         </ul>
     </p>
@@ -45,46 +46,48 @@
 
 <section class="padding-small dark rules">
     <h3>Rozhraní hry</h3>
-    <p>Rozhraní samotné hry se vám ukáže po kliknutí na tlařítko "Hry" v pravém horním menu.
-        Doporučujeme si ho prohlédnout před samotným začátkem hry.</p>
+    <p>Rozhraní samotné hry se vám ukáže po vybrání konkrétní hry.
+        Hru můžete vybrat ze seznamu v záložce "Hry" v horním menu.
+        Doporučujeme si rozhraní prohlédnout před samotným začátkem hry.</p>
     <p>V horní části stránky se nachází informační panel.
-        Na jeho pravé straně vidíte vaši současnou hotovost, na pravé pak čas zbývající do konce tahu.</p>
+        Na jeho levé straně vidíte vaši současnou hotovost, na pravé pak čas zbývající do konce tahu.</p>
     <p>V následující části najdete přehledy plodin a dobytka.
-        V tabulkách najdete důležité (neměnné) vlastnosti a měnící se ceny, v grafech pak současný stav svých polí, pastvin a stodoly. </p>
+        V tabulkách najdete důležité (neměnné) vlastnosti včetně měnících se cen, v grafech pak současný stav svých polí, pastvin a své stodoly. </p>
 </section>
 
 <section class="padding-small light rules">
-    <div class="half brick">
+<div class="horizontal-container">
+    <div>
         <h3>Je zakázáno:</h3>
         <p>
             <ul>
-                <li>Spolupracovat s kýmkoli mimo váš soutěžní tým</li>
-                <li>Komunikovat s ostatními týmy</li>
-                <li>Používat složitější výpočetní techniku</li>
+                <li>Spolupracovat s kýmkoli mimo váš soutěžní tým.</li>
+                <li>Komunikovat s ostatními týmy.</li>
+                <li>Používat složitější výpočetní techniku.</li>
             </ul>
         </p>
     </div>
-    <div class="half brick">
+    <div>
         <h3>Je povoleno:</h3>
         <p>
             <ul>
-                <li>Komunikovat se členy vlastního týmu</li>
-                <li>Obsluhovat aplikaci z více zařízení najednou</li>
-                <li>Dělat si poznámky na papír/do počítače, používat kalkulačku</li>
-                <li>Jíst a pít v průbehu soutěže</li>
-
+                <li>Komunikovat se členy vlastního týmu.</li>
+                <li>Obsluhovat aplikaci z více zařízení najednou.</li>
+                <li>Dělat si poznámky na papír/do počítače, používat kalkulačku.</li>
+                <li>Jíst a pít v průbehu soutěže.</li>
             </ul>
         </p>
     </div>
-
+</div>
 </section>
+
 <section class="padding-small dark rules">
     <h3>Hodnocení:</h3>
     <p>
         <ul>
-            <li>Zisk z jednotlivých kol se sčítá a převádí na body. Tvoří cca 60% celkového hodnocení</li>
-            <li>Průběh hry, vaše analýzy a strategie sepište do jednoho dokumentu a odevzdejte ve formátu pdf do odevzdárny.
-                Po skončení hry se s vámi orgové na 5 minut spojí a položí vám pár otázek. Neopouštějte proto hovor po skončení posledního kola hry.</li>
+            <li>Zisk z jednotlivých kol se sčítá a převádí na body. Tvoří cca 60 % celkového hodnocení</li>
+            <li>Své analýzy, strategie a informace o průběhu hry sepište do jednoho dokumentu a odevzdejte ve formátu pdf do odevzdárny na stránkách <a href='http://ntrophy.cz/'>http://ntrophy.cz/</a>.</li>
+            <li>Po skončení hry se s vámi orgové na 5 minut spojí a položí vám pár otázek. Neopouštějte proto hovor po skončení posledního kola hry.</li>
         </ul>
     </p>
 </section>
