games_page margin repair

--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -278,6 +278,7 @@ a {
     height: auto;
     justify-content: stretch;
     align-items: stretch;
+    margin: auto;
 }
 
 .horizontal-container > div {
