--- a/pastvina/templates/pastvina/rules.html
+++ b/pastvina/templates/pastvina/rules.html
@@ -17,9 +17,9 @@
     <section class="padding-small dark rules">
     <h3>O hře</h3>
     <p>Na následujících 90 minut se stáváte farmáři, pěstujete plodiny, chováte dobytek a snažíte se maximalizovat svůj zisk.</p>
-    <p>Hrát budete celkem čtyřikrát. První kolo nebude na body, bude trvat pouhých 5 minut.
-        Můžete se při ní blíže seznámit s rozhraním hry a pochopit její základní principy.
-        Doporučujeme ji využít k tvorbě strategie pro následující soutěžní kola.</p>
+    <p>Hrát budete celkem čtyřikrát. První kolo nebude na body a bude trvat pouhých 5 minut.
+        Slouží k tomu, abyste se mohli blíže seznámit s rozhraním hry a pochopit její základní principy.
+        Doporučujeme ho využít k tvorbě strategie pro následující soutěžní kola.</p>
     <p>Následující kola budou trvat vždy 10 minut.
         Po každém kole budete mít 5-10 minut čas na analýzu vaší strategie a případnou přípravu strategie nové.</p>
     <p style="margin-top: 10px">
