--- a/pastvina/templates/pastvina/game_overview.html
+++ b/pastvina/templates/pastvina/game_overview.html
@@ -36,7 +36,7 @@
     </div>
 </section>
 
-<section class="statistics">
+<section class="statistics light-color">
     <h2>Statistiky z odehraných kol:</h2>
     <div class="vertical-container">
         {% if test_round %}
