--- a/pastvina/templates/pastvina/login.html
+++ b/pastvina/templates/pastvina/login.html
@@ -3,7 +3,7 @@
 {% block title %} N-Trophy {% endblock %}
 
 {% block content %}
-    <section class="padding dark overlay login">
+    <section class="padding dark-color login">
         <form method="POST" action="" class="login center">
 	    {% csrf_token %}
             <h3 class="dark-text">Přihlášení</h3>
