--- a/pastvina/templates/pastvina/parts/game_header.html
+++ b/pastvina/templates/pastvina/parts/game_header.html
@@ -1,6 +1,6 @@
 <!-- Game Header -->
 <div id="game-header">
-    <div class="horizontal-apart game-header">
+    <div class="horizontal-apart game-header dark-color">
         <div>Peníze: <span id="game-money">-</span></div>
         <div>Další iterace za <span id="tick-countdown">-</span> s</div>
     </div>
