--- a/pastvina/templates/pastvina/parts/menu.html
+++ b/pastvina/templates/pastvina/parts/menu.html
@@ -3,9 +3,9 @@
 {% include "pastvina/parts/login-modal.html" %}
 
 {% if navbar_absolute_pos %}
-<nav class="absolute">
+<nav class="absolute dark-color">
 {% else %}
-<nav>
+<nav class="dark-color">
 {% endif %}
 <div class="horizontal-apart">
     <div class="nav-container">
