--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     font-family: "Quicksand", sans-serif;
-    background-color: #90d43d;
+    background-color: white;
     color: white;
 }
 
@@ -234,6 +234,18 @@ article .labels span.orange {
     color: white;
 }
 
+.light-color {
+    background-color: #90d43d;
+    color: #383838;
+}
+
+.dark-color {
+    background: rgb(70, 80, 60);
+    background: linear-gradient(150deg, rgba(70, 80, 60, 255) 0%, rgba(20, 30, 10, 255) 100%);
+    color: white;
+}
+
+
 p.alert,
 span.alert {
     color: red;
@@ -395,9 +407,6 @@ nav.absolute {
 }
 
 nav {
-    background: rgb(60, 60, 60);
-    background: linear-gradient(150deg, rgba(60, 60, 60, 1) 0%, rgba(0, 0, 0, 1) 100%);
-    opacity: 85%;
     display: block;
     z-index: 2;
     height: auto;
@@ -442,8 +451,6 @@ nav .logo {
     width: 100%;
     height: 100%;
     position: absolute;
-    /* background: rgb(147,0,193);
-    background: linear-gradient(150deg, rgba(147,0,193,1) 0%, rgba(0,230,255,1) 100%); */
 }
 
 .overlay {
@@ -593,8 +600,6 @@ footer span {
 
 .game-header {
     flex: 1;
-    background: rgb(60, 60, 60);
-    background: linear-gradient(150deg, rgba(70, 80, 60, 255) 0%, rgba(20, 30, 10, 255) 100%);
     padding: 5px 20px;
     overflow: auto;
 }
