--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -55,15 +55,15 @@
 <section class="padding-small light">
         {% for crop in crops %}
         <div class="container control-box">
-            <div class="quarter brick">
-                <div class="brick-inputs">
+            <div class="trade-inputs">
+                <div>
                     <input id="buy-crop-count-{{crop.id}}" class="full-width input setter" type="number" value=0 min="0">
                     <button class="full-width buy-sell-button setter" onclick="requestTrade('buy', 'crop', {{crop.id}}, document.getElementById('buy-crop-count-{{crop.id}}').value)">Koupit</button>
                 </div>
             </div>
             {% include "pastvina/parts/age_chart.html" with chart_type="crop" color=crop.color name=crop.name name_genitive=crop.name_genitive id=crop.id growth_time=crop.growth_time life_time=crop.rotting_time %}
-            <div class="quarter brick">
-                <div class="brick-inputs">
+            <div class="trade-inputs">
+                <div>
                     <input id="sell-crop-count-{{crop.id}}" class="full-width input setter" type="number" value=0 min="0">
                     <button class="full-width buy-sell-button setter" onclick="requestTrade('sell', 'crop', {{crop.id}}, document.getElementById('sell-crop-count-{{crop.id}}').value)">Prodat</button>
                 </div>
@@ -111,19 +111,19 @@
 <section class="padding-small light">
         {% for ls in livestock %}
         <div class="container control-box">
-            <div class="quarter brick">
-                <div class="brick-inputs">
+            <div class="trade-inputs">
+                <div>
                     <input id="buy-ls-count-{{ls.id}}" class="full-width input setter" type="number" value=0 min="0">
                     <button class="full-width buy-sell-button setter" onclick="requestTrade('buy', 'ls', {{ls.id}}, document.getElementById('buy-ls-count-{{ls.id}}').value)">Koupit</button>
                 </div>
             </div>
             {% include "pastvina/parts/age_chart.html" with chart_type="livestock" color=ls.color name=ls.name name_genitive=ls.name_genitive id=ls.id growth_time=ls.growth_time life_time=ls.life_time %}
-            <div class="quarter brick">
-                <div class="brick-inputs">
+            <div class="trade-inputs">
+                <div>
                     <input id="sell-ls-count-{{ls.id}}" class="full-width input setter" type="number" value=0 min="0">
                     <button class="full-width buy-sell-button setter" onclick="requestTrade('sell', 'ls', {{ls.id}}, document.getElementById('sell-ls-count-{{ls.id}}').value)">Porazit a prodat (max <span class="ls-sell-limit">{{round.livestock_slaughter_limit}}</span> ks)</button>
-                <div class="brick-inputs">
                 </div>
+                <div>
                     <input id="kill-ls-count-{{ls.id}}" class="full-width input setter" type="number" value=0 min="0">
                     <button class="full-width buy-sell-button setter" onclick="requestTrade('kill', 'ls', {{ls.id}}, document.getElementById('kill-ls-count-{{ls.id}}').value)">Utratit</button>
                 </div>
