fix positive integers in data model

--- a/pastvina/templates/pastvina/parts/age_chart.html
+++ b/pastvina/templates/pastvina/parts/age_chart.html
@@ -39,6 +39,7 @@
                 yAxes: [
                     {
                         scaleLabel: {
+                            beginAtZero: true,
                             display: true,
                             {% if chart_type == 'livestock' %}
                             labelString: "kusy",
