--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -142,7 +142,7 @@
     {% endfor %}
     livestockSellLimit = {{round.livestock_slaughter_limit}};
 
-    setInterval(updateTimeToNextTick, 1000);
+<!--    setInterval(updateTimeToNextTick, 1000);-->
 </script>
 
 {% endblock %}
